# llm-grok

./: .gitattributes  .gitignore  .package-name  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  llm_grok.py  pyproject.toml  pyrightconfig.json  pytest.ini  update-repo-metadata.sh
.claude/: hooks.json
.claude/hooks/: type_safety_guard.py
.github/workflows/: publish.yml  publish.yml.bak  test.yml
docs/archive/: README.md
examples/: README.md  consolidated_plugin.py
llm_grok/: __init__.py  client.py  constants.py  exceptions.py  grok.py  llm_grok.py  models.py  plugin.py  types.py  utils.py
llm_grok/formats/: __init__.py  anthropic.py  base.py  openai.py
llm_grok/processors/: __init__.py  multimodal.py  streaming.py  tools.py
tests/: test_circuit_breaker.py  test_foundation_types.py  test_grok.py
tests/integration/: test_grok_integration.py  test_plugin_loading.py
tests/unit/: test_client.py  test_exceptions.py  test_formats.py  test_models.py  test_processors.py  test_types.py
tests/utils/: __init__.py  mocks.py
